[package]
name = "freshrss-image-cache-proxy"
version = "0.1.0"
edition = "2021"
authors = ["MisLink <gjq.uoiai@outlook.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7", features = ['http'] }
worker-macros = { version = "0.7", features = ['http'] }
http = "1"
serde = "1"
sha2 = "0.10"
base16ct = "1"

[profile.release]
lto = true
codegen-units = 1
panic = "unwind"

[profile.dev]
debug = 0
